k8s/hasura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: smstore-core
  name: smstore-core
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smstore-core
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: smstore-core
    spec:
      containers:
      - image: hasura/graphql-engine:v2.0.6
        imagePullPolicy: IfNotPresent
        name: hasura
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
