k8s/hasura/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smstore-core
  name: smstore-core
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: smstore-core
  type: ClusterIP
