k8s/hasura/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smstore-core
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - core.tiemcuatui.com
    secretName: wildcard-tiemcuatui-com-tls
  rules:
  - host: core.tiemcuatui.com
    http:
      paths:
      - path: /
        backend:
          serviceName: smstore-core
          servicePort: 80
